# auto_robot

./: README.md  build.sh  common_commands.sh  map.sh  nav copy.sh  nav.sh  nav_blue.sh  nav_red.sh  run.sh  run32.sh  save_grid_map.sh  ssh_launch_red.sh
src/rc_controller/: CMakeLists.txt  README.md  package.xml
src/rc_controller/include/rc_controller/: pid_controller.hpp
src/rc_controller/launch/: controller..launch.py  controller.launch.py
src/rc_controller/src/: pid_controller.cpp
src/rc_decision/: CMakeLists.txt  package.xml
src/rc_decision/launch/: decision.launch.py  nav.launch.py
src/rc_decision/src/: action_mode_pub_node.cpp  game_start.cpp  goal_id_pub_node.cpp  master_decision_32.cpp  move_mode_pub_node.cpp  nav_control.cpp  param_adjuster.cpp  param_id_pub_node.cpp  param_setter.cpp  pose_controller.cpp  position_id_pub.cpp  pub_goal_pose.cpp  rc_decision.cpp  rc_decision_32.cpp  rc_move.cpp  rc_nav.cpp  read_nav_status.cpp  robot_mode_publisher.cpp  send_chioce.cpp  send_goal.cpp  test_3goal  tf_listener.cpp  vision_decision.cpp
src/rc_interface_msgs/msg/: Motion.msg
src/rc_locdec_bringup/: CMakeLists.txt  package.xml
src/rc_locdec_bringup/config/: mhqr2_blue.yaml  mhqr2_red.yaml  node_param_blue.yaml  node_param_red.yaml  node_params.yaml
src/rc_locdec_bringup/launch/: locdec_bingup.launch.py  locdec_bringup_blue.launch.py  locdec_bringup_red.launch.py  mhqr2_blue.launch.py  mhqr2_red.launch.py
src/rc_locolization/FAST_LIO/config/: mid360.yaml
src/rc_locolization/FAST_LIO/launch/: mapping.launch.py
src/rc_locolization/livox_ros_driver2/: LICENSE
src/rc_locolization/livox_ros_driver2/config/: MID360_config.json  mixed_HAP_MID360_config.json
src/rc_machine_interface/: CMakeLists.txt  package.xml
src/rc_machine_interface/msg/: Machine_interface.msg
src/rc_serial_driver/: CMakeLists.txt  package.xml
src/rc_serial_driver/config/: serial_driver.yaml
src/rc_serial_driver/include/rc_serial_driver/: crc.hpp  packet.hpp  rc_serial_driver.hpp
src/rc_serial_driver/launch/: serial_driver.launch.py
src/rc_serial_driver/src/: crc.cpp  rc_serial_driver.cpp
src/rc_state_collector/: CMakeLists.txt  README.md  package.xml
src/rc_state_collector/docs/: rc_goal_client.cpp  rc_goal_client.hpp  rc_goal_server.cpp
src/rc_state_collector/include/rc_state_collector/: rc_goal_server.hpp  rc_mhq.hpp  rc_state_collector.hpp
src/rc_state_collector/launch/: state_collector.launch.py
src/rc_state_collector/src/: rc_mhq.cpp  rc_state_collector.cpp
src/rc_vision/: package.xml  setup.cfg  setup.py
src/rc_vision/rc_vision/: GetEulr.py  open_vino.py  pub.py  pub_balls_track1.py  pub_quqiu.py  pub_quzhao.py  pub_zhaokuang_vino.py  sub_stop_quqiu.py  test.py
src/rc_vision/rc_vision/weights/weights2/best_openvino_model/: best.xml  metadata.yaml
src/rm_driver/livox_ros_driver2/: README.md
src/rm_driver/livox_ros_driver2/config/: MID360_config.json
src/rm_driver/serial_driver/: CMakeLists.txt  package.xml
src/rm_driver/serial_driver/launch/: command.launch.py  pub_odom.launch.py  pub_target.launch.py  pub_velocity.launch.py
src/rm_driver/serial_driver/src/: action_command.cpp  pub_odom.cpp  pub_target.cpp  pub_velocity.cpp  recived.py  send_move_command.cpp  sub_serial_pub_status.cpp
src/rm_localization/FAST_LIO/src/: laserMapping.cpp
src/rm_localization/icp_registration/config/: icp.yaml
src/rm_localization/point_lio/: CMakeLists.txt
src/rm_localization/point_lio/include/IKFoM/IKFoM_toolkit/mtk/types/: S2.hpp
src/rm_localization/point_lio/include/ivox/: eigen_types.h
src/rm_localization/point_lio/src/: laserMapping.cpp
src/rm_nav_bringup/PCD/: RC2024.pcd
src/rm_nav_bringup/config/reality/: MID360_config.json  fastlio_mid360_real.yaml  icp_registration_real.yaml  measurement_params_real.yaml  nav2_params_real.yaml  segmentation_real.yaml
src/rm_nav_bringup/launch/: bringup_real.launch.py
src/rm_nav_bringup/map/: RC2024.pgm  RC2024.yaml
src/rm_navigation/costmap_converter/costmap_converter/src/costmap_to_dynamic_obstacles/: costmap_to_dynamic_obstacles.cpp
src/rm_navigation/fake_vel_transform/src/: fake_vel_transform.cpp
src/rm_navigation/rm_navigation/params/: nav2_params.yaml
src/ros_msgs/rc_interface_msgs/: CMakeLists.txt  package.xml
src/ros_msgs/rc_interface_msgs/msg/: Mhq.msg  Motion.msg
src/ros_msgs/rc_interface_msgs/srv/: InitPos.srv
src/ros_msgs/yolov8_msgs/msg/: Detection.msg
